# tpm2-client

./: .gitignore  HashSequenceScheduler.cpp  HashSequenceScheduler.h  HashSequenceScheduler_test.cpp  Makefile  NVSpaceMaster.cpp  NVSpaceMaster.h  NVStorageFormatter.cpp  NVStorageFormatter.h  README.md  ResponseCodeResolver.cpp  ResponseCodeResolver.h  main.cpp  meson.build  sockets.h  tcti_util.c  tcti_util.h
autoconf-archive-20190106/: ChangeLog  Makefile.in  configure
autoconf-archive-20190106/.pc/: applied-patches
autoconf-archive-20190106/debian/: .git-dpm  autoconf-archive.install  changelog  control  copyright  rules  watch
autoconf-archive-20190106/doc/: Makefile.in  all-macros.texi  ax_add_fortify_source.texi  ax_blas.texi  ax_cflags_warn_all.texi  ax_compiler_vendor.texi  ax_cpu_vendor.texi  ax_cxx_compile_stdcxx.texi  ax_gcc_builtin.texi  ax_gcc_func_attribute.texi  ax_have_qt.texi  ax_is_release.texi  ax_lapack.texi  ax_pthread.texi  ax_subdirs_configure.texi  version.texi
test_talking_with_simulator/: simulator.md  talk_with_simulator.py
tpm2-abrmd-2.3.3/: bootstrap
tpm2-abrmd-2.3.3/debian/: changelog  control  copyright  libtss2-tcti-tabrmd-dev.install  libtss2-tcti-tabrmd0.symbols  rules  tpm2-abrmd.init  tpm2-abrmd.install  watch
tpm2-abrmd-2.3.3/man/: tpm2-abrmd.8.in
tpm2-tools-5.0/: configure.ac
tpm2-tools-5.0/.pc/: applied-patches
tpm2-tools-5.0/debian/: NEWS  changelog  clean  control  copyright  rules  (+2 more)
ubuntu-21.04-docker/: Dockerfile  aliyun.sources.list
utils/: KeyGenerator_test.cpp  KeyUtilities.cpp  KeyUtilities.h  Makefile
(+73 files in other folders)
